WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310104
Fix display:contents text wrapper teardown causing select button text reorder
https://bugs.webkit.org/show_bug.cgi?id=310104
Summary
Fix display:contents text wrapper teardown causing select button text reorder
Anne van Kesteren
Reported
2026-03-17 09:09:01 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Anne van Kesteren
Comment 1
2026-03-17 09:11:14 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60776
EWS
Comment 2
2026-03-18 21:40:48 PDT
Committed
309530@main
(2b60e500ed5c): <
https://commits.webkit.org/309530@main
> Reviewed commits have been landed. Closing PR #60776 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-03-18 21:41:12 PDT
<
rdar://problem/172889774
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug